--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
-    "react-bootstrap": "1.6.1",
-    "react-bootstrap-hooks-alert": "^1.0.11",
+    "react-bootstrap": "2.0.0-beta.6",
+    "react-bootstrap-hooks-alert": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
